feat: add rf215_radio interface and context

--- a/kaonic/src/CMakeLists.txt
+++ b/kaonic/src/CMakeLists.txt
@@ -11,6 +11,9 @@ target_sources(
     kaonic
 
     PRIVATE
+        comm/radio/rf215_radio.cpp
+
+        grpc/context.cpp
         grpc/device_service.cpp
         grpc/radio_service.cpp
 )
@@ -19,6 +22,7 @@ target_link_libraries(
     kaonic
 
     PUBLIC
+        spdlog::spdlog
         kaonic_proto
 )
 
