chore: update CMakeLists.txt of the kaonic library

--- a/kaonic/src/CMakeLists.txt
+++ b/kaonic/src/CMakeLists.txt
@@ -13,6 +13,9 @@ target_sources(
     PRIVATE
         comm/radio/rf215_radio.cpp
 
+        comm/peripheral/peripheral_dispatcher.cpp
+        comm/peripheral/usb_peripheral.cpp
+
         grpc/context.cpp
         grpc/device_service.cpp
         grpc/radio_service.cpp
