--- a/kaonic/version.in
+++ b/kaonic/version.in
@@ -1,3 +1,7 @@
 #pragma once
 
-#define VERSION "@VERSION@"
+#include <string_view>
+
+namespace kaonic::info {
+    constexpr std::string_view version = "@VERSION@";
+}
