--- a/kaonic/config.in
+++ b/kaonic/config.in
@@ -43,7 +43,7 @@ namespace kaonic::config {
     };
 
     constexpr std::string_view serial_tty_path = "@SERIAL_TTY_PATH@";
-    constexpr size_t serial_bound_rate = @SERIAL_BOUND_RATE@;
+    constexpr size_t serial_baud_rate = @SERIAL_BAUD_RATE@;
 
     constexpr std::string_view server_url = "@SERVER_ADDR@:@SERVER_PORT@";
 }
