--- a/kaonic/config.in
+++ b/kaonic/config.in
@@ -11,39 +11,42 @@ namespace kaonic::config {
     };
 
     struct gpio_config final {
-        std::string_view chip_name;
+        std::string_view rst_chip_name;
         size_t rst_chip_line;
-        size_t iqr_chip_line;
+        std::string_view irq_chip_name;
+        size_t irq_chip_line;
     };
 
-    constexpr gpio_config gpio1 {
-        .chip_name = "@GPIO1_CHIP@",
-        .rst_chip_line = @GPIO1_RST_LINE@,
-        .iqr_chip_line = @GPIO1_IRQ_LINE@,
+    constexpr gpio_config rfa_gpio {
+        .rst_chip_name = "@KAONIC_RFA_GPIO_RST_CHIP@",
+        .rst_chip_line = @KAONIC_RFA_GPIO_RST_LINE@,
+        .irq_chip_name = "@KAONIC_RFA_GPIO_IRQ_CHIP@",
+        .irq_chip_line = @KAONIC_RFA_GPIO_IRQ_LINE@,
     };
 
-    constexpr gpio_config gpio2 {
-        .chip_name = "@GPIO2_CHIP@",
-        .rst_chip_line = @GPIO2_RST_LINE@,
-        .iqr_chip_line = @GPIO2_IRQ_LINE@,
+    constexpr gpio_config rfb_gpio {
+        .rst_chip_name = "@KAONIC_RFB_GPIO_RST_CHIP@",
+        .rst_chip_line = @KAONIC_RFB_GPIO_RST_LINE@,
+        .irq_chip_name = "@KAONIC_RFB_GPIO_IRQ_CHIP@",
+        .irq_chip_line = @KAONIC_RFB_GPIO_IRQ_LINE@,
     };
 
-    constexpr spi_config spi1 {
-        .device_path = "@SPI1_DEVICE_PATH@",
-        .speed = @SPI1_SPEED@,
-        .mode = @SPI1_MODE@,
-        .bpw = @SPI1_BPW@,
+    constexpr spi_config rfa_spi {
+        .device_path = "@KAONIC_RFA_SPI_PATH@",
+        .speed = @KAONIC_RFA_SPI_SPEED@,
+        .mode = @KAONIC_RFA_SPI_MODE@,
+        .bpw = @KAONIC_RFA_SPI_BPW@,
     };
 
-    constexpr spi_config spi2 {
-        .device_path = "@SPI2_DEVICE_PATH@",
-        .speed = @SPI2_SPEED@,
-        .mode = @SPI2_MODE@,
-        .bpw = @SPI2_BPW@,
+    constexpr spi_config rfb_spi {
+        .device_path = "@KAONIC_RFB_SPI_PATH@",
+        .speed = @KAONIC_RFB_SPI_SPEED@,
+        .mode = @KAONIC_RFB_SPI_MODE@,
+        .bpw = @KAONIC_RFB_SPI_BPW@,
     };
 
-    constexpr std::string_view serial_tty_path = "@SERIAL_TTY_PATH@";
-    constexpr size_t serial_baud_rate = @SERIAL_BAUD_RATE@;
+    constexpr std::string_view KAONIC_SERIAL_TTY_PATH = "@KAONIC_SERIAL_TTY_PATH@";
+    constexpr size_t KAONIC_SERIAL_BAUD_RATE = @KAONIC_SERIAL_BAUD_RATE@;
 
-    constexpr std::string_view server_url = "@SERVER_ADDR@:@SERVER_PORT@";
+    constexpr std::string_view server_url = "@KAONIC_SERVER_ADDR@:@KAONIC_SERVER_PORT@";
 }
