--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/gabime/spdlog.git
 [submodule "extern/rf215"]
 	path = extern/rf215
-	url = git@github.com:BeechatNetworkSystemsLtd/kaonic-rf215.git
+	url = https://github.com/BeechatNetworkSystemsLtd/kaonic-rf215.git
 [submodule "extern/rfnet"]
 	path = extern/rfnet
-	url = git@github.com:BeechatNetworkSystemsLtd/kaonic-rfnet.git
+	url = https://github.com/BeechatNetworkSystemsLtd/kaonic-rfnet.git
