--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,4 +39,4 @@ endif()
 add_subdirectory(extern)
 add_subdirectory(proto)
 add_subdirectory(kaonic)
-add_subdirectory(tests)
+# add_subdirectory(tests)
