--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -23,7 +25,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y cmake ninja-build build-essential python3-pip
 
-      - name: Download Yocto SDK from latest GitHub release
+      - name: Download Kaonic Yocto SDK
         run: |
           ASSET_NAME="stm32mp1-kaonic-proto-sdk-aarch64.sh"
           DOWNLOAD_URL=$(curl -s https://api.github.com/repos/BeechatNetworkSystemsLtd/kaonic-yocto/releases/latest \
@@ -34,25 +36,21 @@ jobs:
             echo "SDK asset not found in latest release."
             exit 1
           fi
-          wget "$DOWNLOAD_URL" -O yocto-sdk.sh
+          echo "Downloading SDK from $DOWNLOAD_URL"
+          wget -q "$DOWNLOAD_URL" -O yocto-sdk.sh
           chmod +x yocto-sdk.sh
+          echo "Installing Yocto SDK..."
           ./yocto-sdk.sh -y -d $HOME/yocto-sdk
-
-      - name: Set up Yocto environment
-        run: |
-          echo "source $HOME/yocto-sdk/environment-setup-cortexa7t2hf-neon-vfpv4-ostl-linux-gnueabi" >> $GITHUB_ENV
 
       - name: Build CMake project
         run: |
+          source $HOME/yocto-sdk/environment-setup-cortexa7t2hf-neon-vfpv4-ostl-linux-gnueabi
           cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
           cmake --build build --config Release
 
-      - name: Prepare deploy directory
+      - name: Create Kaonic OTA package
         run: |
           mkdir -p deploy
-
-      - name: Create OTA update package
-        run: |
           echo "${{ secrets.BEECHAT_KAONIC_COMM_OTA_KEY }}" > ota_sign_key.pem
           chmod 600 ota_sign_key.pem
           python3 scripts/create-ota.py \
