--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y cmake ninja-build build-essential python3-pip
 
-      - name: Download Kaonic Yocto SDK
+      - name: Install Kaonic Yocto SDK
         run: |
           ASSET_NAME="stm32mp1-kaonic-proto-sdk-aarch64.sh"
           DOWNLOAD_URL=$(curl -s https://api.github.com/repos/BeechatNetworkSystemsLtd/kaonic-yocto/releases/latest \
@@ -42,8 +42,9 @@ jobs:
           echo "Installing Yocto SDK..."
           ./yocto-sdk.sh -y -d $HOME/yocto-sdk
 
-      - name: Build CMake project
+      - name: Build 'kaonic-commd'
         run: |
+          unset LD_LIBRARY_PATH
           source $HOME/yocto-sdk/environment-setup-cortexa7t2hf-neon-vfpv4-ostl-linux-gnueabi
           cmake -S . -B build -DCMAKE_BUILD_TYPE=Release
           cmake --build build --config Release
