--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: 'recursive'
+          fetch-tags: true
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -67,7 +68,7 @@ jobs:
           python3 scripts/create-ota.py \
             -b ./build \
             -o ./deploy \
-            -s ota_sign_key.pem
+            -s ota_sign_key.pem \
             --keep
 
       - name: Upload OTA package artifact
