--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           submodules: 'recursive'
           fetch-tags: true
+          fetch-depth: 0
 
       - name: Set up Python
         uses: actions/setup-python@v5
